--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ ul li { background:white; padding:15px; border-radius:10px; margin-bottom:10px; 
 <section id="galeria">
     <h2>Galería de fotos</h2>
     <div class="gallery">
-        <img src="https://via.placeholder.com/200x150?text=Cabra+1" alt="Cabra 1">
+        <img src="https://github.com/grupomultipc/goat-lamb.farm/alpina.jpg=Cabra+1" alt="Cabra 1">
         <img src="https://via.placeholder.com/200x150?text=Cabra+2" alt="Cabra 2">
         <img src="https://via.placeholder.com/200x150?text=Granjas" alt="Granjas">
         <img src="https://via.placeholder.com/200x150?text=Crías" alt="Crías">
