--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ ul li { background:white; padding:15px; border-radius:10px; margin-bottom:10px; 
 <body>
 
 <header>
-    <h1>Crianza de Cabras - San Vicente Pacaya</h1>
+    <h1>Crianza de Cabras - Parque Ecológico los Cipreses, Volcan pacaya </h1>
     <p>Mejorando la vida de nuestra comunidad a través de la ganadería caprina</p>
 </header>
 
@@ -172,7 +172,7 @@ ul li { background:white; padding:15px; border-radius:10px; margin-bottom:10px; 
 </section>
 
 <footer>
-    <p>&copy; 2025 Crianza de Cabras - San Vicente Pacaya | Todos los derechos reservados</p>
+    <p>&copy; 2025 Crianza de Cabras - Parque Ecológico los Cipreses, Volcan pacaya | Todos los derechos reservados</p>
 </footer>
 
 </body>
