--- a/index.html
+++ b/index.html
@@ -381,10 +381,10 @@ ul li:hover {
                 </ul>
             </div>
             <div class="animal-images">
-                <img src="img-cabra-1.jpg" alt="Cabra con crías">
-                <img src="img-cabra-2.jpg" alt="Cabra en el campo">
-                <img src="img-cabra-3.jpg" alt="Cabra produciendo leche">
-                <img src="img-cabra-4.jpg" alt="Cabra siendo ordeñada">
+                <img src="img-alpina.jpg" alt="Cabra con crías">
+                <img src="img-cabras.jpg" alt="Cabra en el campo">
+                <img src="img-cria.jpg" alt="Cabra produciendo leche">
+                <img src="img-granja.jpg" alt="Cabra siendo ordeñada">
             </div>
         </div>
     </div>
