--- a/index.html
+++ b/index.html
@@ -435,10 +435,10 @@ ul li:hover {
     <div class="container">
         <h2>Galería de fotos</h2>
         <div class="gallery">
-            <img src="img-cabra-1.jpg" alt="Cabra con crías">
-            <img src="img-cabra-2.jpg" alt="Cabra en el campo">
-            <img src="img-cabra-3.jpg" alt="Producción de queso de cabra">
-            <img src="img-cabra-4.jpg" alt="Ordeño de cabras">
+            <img src="alpina.jpg" alt="Cabra con crías">
+            <img src="cabras.jpg" alt="Cabra en el campo">
+            <img src="granja.jpg" alt="Producción de queso de cabra">
+            <img src="cria.jpg" alt="Ordeño de cabras">
             <img src="img-cordero-1.jpg" alt="Corderos pastando">
             <img src="img-cordero-2.jpg" alt="Corderos jóvenes">
             <img src="img-cordero-3.jpg" alt="Corderos en el campo">
