--- a/index.html
+++ b/index.html
@@ -392,9 +392,9 @@ ul li:hover {
             </div>
             <div class="animal-images">
                 <img src="https://grupomultipc.github.io/goat-lamb.farm/cabras.jpg" alt="Cabras en el campo" onerror="this.src='https://images.unsplash.com/photo-1547471080-7cc2caa01a7e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80'">
-                <img src="https://grupomultipc.github.io/goat-lamb.farm/cabra1.jpg" alt="Cabra 1" onerror="this.src='https://images.unsplash.com/photo-1516937941344-00b4e0337589?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80'" class="image-loading">
-                <img src="https://grupomultipc.github.io/goat-lamb.farm/cabra2.jpg" alt="Cabra 2" onerror="this.src='https://images.unsplash.com/photo-1570042225831-d98fa7577f1e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80'" class="image-loading">
-                <img src="https://grupomultipc.github.io/goat-lamb.farm/cabra3.jpg" alt="Cabra 3" onerror="this.src='https://images.unsplash.com/photo-1596733430284-f7437764b1a9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80'" class="image-loading">
+                <img src="https://grupomultipc.github.io/goat-lamb.farm/alpina.jpg" alt="Cabra 1" onerror="this.src='https://images.unsplash.com/photo-1516937941344-00b4e0337589?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80'" class="image-loading">
+                <img src="https://grupomultipc.github.io/goat-lamb.farm/cria.jpg" alt="Cabra 2" onerror="this.src='https://images.unsplash.com/photo-1570042225831-d98fa7577f1e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80'" class="image-loading">
+                <img src="https://grupomultipc.github.io/goat-lamb.farm/granja.jpg" alt="Cabra 3" onerror="this.src='https://images.unsplash.com/photo-1596733430284-f7437764b1a9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80'" class="image-loading">
             </div>
         </div>
     </div>
