--- a/index.html
+++ b/index.html
@@ -415,10 +415,10 @@ ul li:hover {
                 </ul>
             </div>
             <div class="animal-images">
-                <img src="https://grupomultipc.github.io/goat-lamb.farm/corderos.jpg" alt="Corderos en el campo" onerror="this.src='https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80'">
-                <img src="https://grupomultipc.github.io/goat-lamb.farm/cordero1.jpg" alt="Cordero 1" onerror="this.src='https://images.unsplash.com/photo-1551542464-876c3a7a7d2c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80'" class="image-loading">
-                <img src="https://grupomultipc.github.io/goat-lamb.farm/cordero2.jpg" alt="Cordero 2" onerror="this.src='https://images.unsplash.com/photo-1570042225831-d98fa7577f1e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80'" class="image-loading">
-                <img src="https://grupomultipc.github.io/goat-lamb.farm/cordero3.jpg" alt="Cordero 3" onerror="this.src='https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80'" class="image-loading">
+                <img src="https://grupomultipc.github.io/goat-lamb.farm/alpina.jpg" alt="Corderos en el campo" onerror="this.src='https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80'">
+                <img src="https://grupomultipc.github.io/goat-lamb.farm/cabras.jpg" alt="Cordero 1" onerror="this.src='https://images.unsplash.com/photo-1551542464-876c3a7a7d2c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80'" class="image-loading">
+                <img src="https://grupomultipc.github.io/goat-lamb.farm/granja.jpg" alt="Cordero 2" onerror="this.src='https://images.unsplash.com/photo-1570042225831-d98fa7577f1e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80'" class="image-loading">
+                <img src="https://grupomultipc.github.io/goat-lamb.farm/cria.jpg" alt="Cordero 3" onerror="this.src='https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80'" class="image-loading">
             </div>
         </div>
     </div>
